[package]
name = "libhash"
version = "0.1.0"
authors = ["Maxim Zakharov <5158255+Maxime2@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.97", features = ["derive"] }
to_vec = "*"
failure = "0.1.5"
